# Refactor-Practice

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  pyproject.toml  pytest.ini
doc/adr/: 0001-record-architecture-decisions.md
resources/Chapter04-ProductionPlan/: province_data.json
src/: statement.py
src/Chapter04-ProductionPlan/: producer.py  province.py
src/Chapter6/: m01_extract_function.py  m02_inline_function.py  m03_extract_variable.py  m04_inline_variable.py  m05_change_function_declaration.py  m06_encapsulate_variable.py  m07_rename_variable.py  m08_introduce_parameter_object.py  m09_combine_functions_into_class.py  m10_combine_functions_into_transform.py  m11_split_phase.py  test_01_extract_function.py  test_02_inline_function.py  test_03_extract_variable.py  test_04_inline_variable.py  test_05_change_function_declaration.py  test_06_encapsulate_variable.py  test_07_rename_variable.py  test_08_introduce_parameter_object.py  test_09_combine_functions_into_class.py  test_10_combine_functions_into_transform.py
src/production_plan/: producer.py  province.py
src/statement/: statement.py
tests/: conftest.py  test_render.py  test_statement.py
tests/Chapter6/: test_01_extract_function.py  test_02_inline_function.py  test_03_extract_variable.py  test_04_inline_variable.py  test_05_change_function_declaration.py  test_06_encapsulate_variable.py  test_07_rename_variable.py  test_09_combine_functions_into_class.py  test_10_combine_functions_into_transform.py  test_11_split_phase.py
tests/production_plan/: conftest.py  test_province.py
(+3 files in other folders)
