[project]
name = "refactor-practice"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{name="zhenqi", email="dreamingwzq@gmail.com"}]
requires-python = "^3.11"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pydantic = "^2.11.7"

[tool.poetry.group.pre-commit.dependencies]
pre-commit = "^3.8.0"
black = "^24.8.0"
flake8 = "^7.1"
isort = "^5.13"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-mock = "^3"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
